// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner 1`] = `
<svg
  height="16"
  space="preserve"
  viewBox="0 0 50 50"
  width="16"
>
  <path
    d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z"
    fill="#F16622"
  >
    <animateTransform
      attributeName="transform"
      attributeType="xml"
      dur="0.6s"
      from="0 25 25"
      repeatCount="indefinite"
      to="360 25 25"
      type="rotate"
    />
  </path>
</svg>
`;

exports[`Spinner Color 1`] = `
<svg
  height="16"
  space="preserve"
  viewBox="0 0 50 50"
  width="16"
>
  <path
    d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z"
    fill="black"
  >
    <animateTransform
      attributeName="transform"
      attributeType="xml"
      dur="0.6s"
      from="0 25 25"
      repeatCount="indefinite"
      to="360 25 25"
      type="rotate"
    />
  </path>
</svg>
`;

exports[`Spinner with custom size 1`] = `
<svg
  height="36"
  space="preserve"
  viewBox="0 0 50 50"
  width="36"
>
  <path
    d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z"
    fill="#F16622"
  >
    <animateTransform
      attributeName="transform"
      attributeType="xml"
      dur="0.6s"
      from="0 25 25"
      repeatCount="indefinite"
      to="360 25 25"
      type="rotate"
    />
  </path>
</svg>
`;

exports[`Spinner with large size 1`] = `
<svg
  height="80"
  space="preserve"
  viewBox="0 0 50 50"
  width="80"
>
  <path
    d="M25.251,6.461c-10.318,0-18.683,8.365-18.683,18.683h4.068c0-8.071,6.543-14.615,14.615-14.615V6.461z"
    fill="#F16622"
  >
    <animateTransform
      attributeName="transform"
      attributeType="xml"
      dur="0.6s"
      from="0 25 25"
      repeatCount="indefinite"
      to="360 25 25"
      type="rotate"
    />
  </path>
</svg>
`;
